fix: sign up button on mobile view opening appropriate link and ask dora button fully clickable

--- a/css/index.css
+++ b/css/index.css
@@ -298,6 +298,7 @@ select:focus-visible {
   height: 21px;
   width: 96.5px;
   border-radius: 2.5px;
+  z-index: 5;
 }
 
 .section__header {
